feat(reservations): add filtering support with null-safety checks
- Updated SeatReservationController to support filtering by userId, showtimeId, movieId, and status
- Enhanced SeatReservationService and implementation to handle null values safely
- Updated repository and service logic to prevent crashes when user, showtime, or movie is missing